--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lemonhive",
+  "name": "lemonhivetest",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,10 +14,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.21.0",
-    "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.8"
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5"
   }
 }
